--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "jest",
-    "format": "prettier --write ./"
+    "format": "prettier --write ./",
+    "study": "study"
   },
   "license": "MIT",
   "bugs": {
@@ -20,6 +21,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "study-lenses": "^0.0.174"
   }
 }
